Closed
Bug 278025
Opened 21 years ago
Closed 21 years ago
nsHTMLLinkElement::CreateAndDispatchEvent should call SetTrusted otherwise events *DO* get improperly dispatched untrusted
Categories
(Core :: DOM: Events, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.8beta1
People
(Reporter: timeless, Assigned: bzbarsky)
Details
(Keywords: regression)
Attachments
(2 files)
|
6.08 KB,
text/plain
|
Details | |
|
1.86 KB,
patch
|
jst
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
steps:
1. build mozilla18a5
2. run mozilla
3. attach w/ devenv
4. breakpoint
privEvt->SetTrusted(NS_SUCCEEDED(res) && enabled);
in
nsEventStateManager::DispatchNewEvent
condition: !enabled
5. browse the web
6. sanity check stacks
expected results:
only events dispatched from content should appear.
actual results:
system generated events appear.
| Assignee | ||
Comment 2•21 years ago
|
||
So the point is, the events <link> elements dispatch on SetDocument() are ending
up untrusted if you document.write the <link> (since there's content JS on the
stack).
We should be setting the trusted flag here after we createEvent, no?
| Assignee | ||
Comment 3•21 years ago
|
||
Assignee: events → bzbarsky
Status: NEW → ASSIGNED
Attachment #173106 -
Flags: superreview?(jst)
Attachment #173106 -
Flags: review?(jst)
Comment 4•21 years ago
|
||
Comment on attachment 173106 [details] [diff] [review]
Like so, say
Yeah, makes sense.
Attachment #173106 -
Flags: superreview?(jst)
Attachment #173106 -
Flags: superreview+
Attachment #173106 -
Flags: review?(jst)
Attachment #173106 -
Flags: review+
| Assignee | ||
Comment 5•21 years ago
|
||
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.8beta
You need to log in
before you can comment on or make changes to this bug.
Description
•