LinkAdded/LinkRemoved events should be trusted.  Bug 278025, r+sr=jst